# tensor-optimizer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
custom-allocator/: AlignedCustomAllocator.cpp  AlignedCustomAllocator.h
experimental-tensor-library/: ETensor.cpp  ETensor.h
matrix-library/: MatrixLibrary.cpp  MatrixLibrary.h
native-tensor-library/: NativeTensorLibrary.cpp  NativeTensorLibrary.h
tensor-ops/: EigenOperations.cpp  EigenOperations.h  ExperimentalOperations.cpp  ExperimentalOperations.h  NaiveOperations.cpp  NaiveOperations.h  NativeOperations.cpp  NativeOperations.h
